// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter Badge displays badge containing number of items in filter 1`] = `
<div>
  <div
    class="container"
    data-test="dashboard-filter-badge"
  >
    <span
      class="badge"
    >
      Ponies: 2 selected
    </span>
    <span
      class="badgeSmall"
    >
      Ponies: 2 selected
    </span>
    <span
      class="span"
    >
      <button
        class="removeButton"
      >
        Remove
      </button>
    </span>
  </div>
</div>
`;

exports[`FilterBadge displays badge with filter item name when only one filter item 1`] = `
<div>
  <div
    class="container"
    data-test="dashboard-filter-badge"
  >
    <span
      class="badge"
    >
      Ponies: Twilight Sparkle
    </span>
    <span
      class="badgeSmall"
    >
      Ponies: Twilight Sparkle
    </span>
    <span
      class="span"
    >
      <button
        class="removeButton"
      >
        Remove
      </button>
    </span>
  </div>
</div>
`;
